# pidgin-privacy-please

./: ChangeLog  ChangeLog.md  HowToCrossCompileForWindows.md  HowToCrossCompileForWindowsAgainstLatestPidgin.md  Makefile.am  Makefile.mingw  PidginPatches.md  ProjectHome.md  README  ReadMe.md  configure.ac
branches/gaim-blocky/: AUTHORS  README  configure.ac
branches/gaim-blocky/src/: auto-reply.h
debian/: changelog  control
debian/patches/: 00list
patches/: pidgin-2.0-auth-signals.patch
po/: POTFILES.in  de.po  ru.po
src/: Makefile.am  Makefile.mingw  auto-reply.c  auto-reply.h  autoreply.c  blocklist.c  blocklist.h  botcheck.c  botcheck.h  gaim-blocky.c  pidgin-pp.c  pp-prefs.c  pp-prefs.h
tags/release-0.1.1/: ChangeLog  README  configure.ac
tags/release-0.1.1/src/: Makefile.am  gaim-blocky.c
tags/release-0.2.0/: README  configure.ac
tags/release-0.2.0/src/: auto-reply.c  auto-reply.h
tags/release-0.3.0/: ChangeLog  configure.ac
tags/release-0.3.0/patches/: pidgin-2.0-auth-signals.patch  pidgin-2.0-mtn-blocked-signals.patch
tags/release-0.3.0/src/: auto-reply.c  pidgin-pp.c
tags/release-0.4.0/: ChangeLog
tags/release-0.4.0/patches/: pidgin-2.3.0-blocked-signals-1.0.patch
tags/release-0.4.1/patches/: pidgin-2.4.1-blocked-signals-1.0.patch
tags/release-0.4.1/src/: pidgin-pp.c
tags/release-0.5.0/: configure.ac
tags/release-0.5.0/src/: pidgin-pp.c
tags/release-0.5.1/: ChangeLog  Makefile.mingw  configure.ac
tags/release-0.5.1/patches/: pidgin-2.4.2-blocked-signals-1.0.patch
tags/release-0.5.2/: ChangeLog  README  configure.ac
tags/release-0.5.2/debian/: rules
tags/release-0.5.2/src/: auto-reply.h
tags/release-0.5.2/win32/: pidgin-privacy-please.nsi
tags/release-0.5.3/: ChangeLog  README
tags/release-0.5.3/debian/: changelog
tags/release-0.5.3/src/: auto-reply.c  pidgin-pp.c
tags/release-0.5.3/win32/: pidgin-privacy-please.nsi
tags/release-0.6.0/src/: Makefile.am
tags/release-0.6.0/win32/: pidgin-privacy-please.nsi
tags/release-0.6.1/: ChangeLog  configure.ac
tags/release-0.6.1/src/: auto-reply.c  pidgin-pp.c
tags/release-0.6.2/: ChangeLog  Makefile.am  Makefile.mingw  README  configure.ac
tags/release-0.6.2/po/: POTFILES.in
tags/release-0.6.2/src/: Makefile.am  botcheck.c
tags/release-0.6.2/win32/: pidgin-privacy-please.nsi
tags/release-0.6.4/po/: Makefile.mingw
tags/release-0.6.4/src/: auto-reply.h  botcheck.h  pidgin-pp.c
tags/release-0.6.4/win32/: pidgin-privacy-please.nsi
tags/release-0.7.1/: Makefile.mingw  README
tags/release-0.7.1/po/: ru.po
tags/release-0.7.1/src/: autoreply.c  autoreply.h  blocklist.c  blocklist.h  pidgin-pp.c
trunk/: ChangeLog  Makefile.am  Makefile.mingw  README  configure.ac
trunk/debian/: README.debian  changelog  control  copyright  rules
trunk/po/: POTFILES.in  de.po  pidgin-privacy-please.pot  pl.po  ru.po
trunk/src/: Makefile.am  Makefile.mingw  auto-reply.c  auto-reply.h  botcheck.c  pidgin-pp.c  pp-prefs.c  pp-prefs.h
trunk/win32/: pidgin-privacy-please.nsi
wiki/: ChangeLog.wiki  HowToCrossCompileForWindows.wiki  HowToCrossCompileForWindowsAgainstLatestPidgin.wiki  PidginPatches.wiki  ReadMe.wiki
win32/: pidgin-privacy-please.nsi
(+2 files in other folders)
